--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="../css/style.css">
     <script type="text/javascript" src="../js/chess.js"></script>
 </head>
 <body>
     <h1>Home</h1>
-    <form id="chess_form" onsubmit="event.preventDefault(); send_move();">
-        <input type="text" name="move" id="move">
-        <input type="submit">
-    </form>
+    <main>
+        <form id="chess_form" onsubmit="event.preventDefault(); send_move();">
+            <input type="text" name="move_text" id="move_text">
+            <input type="submit">
+        </form>
+        <div id="moves">
+        </div>
+    </main>
 </body>
 </html>
