--- a/public/html/game.html
+++ b/public/html/game.html
@@ -14,6 +14,7 @@
             <input type="text" name="move_text" id="move_text">
             <input type="submit">
         </form>
+        <p id="timer">10:00</p>
         <div id="moves">
         </div>
     </main>
