make pieces draggable

--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="../css/test.css">
 </head>
 <body>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div id="chessboard"></div>
     <script src="../js/chessboard.js"></script>
 </body>
 </html>
