add pieces and import board

--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="chessboard"></div>
+    <script src="../../js_modules/Board.js"></script>
     <script src="../js/chessboard.js"></script>
 </body>
 </html>
