import front-end

--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div id="chessboard"></div>
-    <script src="../../js_modules/Board.js"></script>
-    <script src="../js/chessboard.js"></script>
+    <script type="module" src="../js/chessboard.mjs">main(location.href);</script>
 </body>
 </html>
