--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -9,5 +9,6 @@
 <body>
     <div id="chessboard"></div>
     <script type="module" src="../js/chessboard.mjs">main(location.href);</script>
+    <piece src="./img/bishop.svg" alt=""></piece>
 </body>
 </html>
