--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <p id="timer2">10:00</p>
     <div id="chessboard"></div>
+    <p id="timer1">10:00</p>
     <script type="module" src="../js/chessboard.mjs">main(location.href);</script>
 </body>
 </html>
