--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -8,7 +8,40 @@
 </head>
 <body>
     <main>
-        <div id="chat"></div>
+        <div id="chat">
+            <div id="messages">
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
+                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
+                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
+            </div>
+            <form id="message-form">
+                <input type="text" id="send-message" name="message" required>
+            </form>
+        </div>
         <div id="game">
             <p id="timer2">10:00</p>
             <div id="chessboard"></div>
