--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -39,7 +39,7 @@
                 <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
             </div>
             <form id="message-form">
-                <input type="text" id="send-message" name="message">
+                <input type="text" id="send-message" name="message" placeholder="entrez un message...">
                 <input type="submit" value="" onclick="event.preventDefault();">
             </form>
         </div>
