--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -44,9 +44,15 @@
             </form>
         </div>
         <div id="game">
-            <p id="timer2">10:00</p>
+            <div id="opponent-infos">
+                <p><span class="user-name">Opponent</span></p>
+                <p id="timer2">10:00</p>
+            </div>
             <div id="chessboard"></div>
-            <p id="timer1">10:00</p>
+            <div id="user-infos">
+                <p><span class="user-name">Vous</span></p>
+                <p id="timer1">10:00</p>
+            </div>
         </div>
         <div id="moves-section"></div>
     </main>
