--- a/public/html/game2.html
+++ b/public/html/game2.html
@@ -10,33 +10,6 @@
     <main>
         <div id="chat">
             <div id="messages">
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
-                <p class="message"><span class="user-name">Vous : </span>Salut !</p>
-                <p class="message"><span class="user-name">Pomme Jedusor : </span>Pomme !</p>
-                <p class="message"><span class="user-name">Vous : </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nostrum!</p>
             </div>
             <form id="message-form">
                 <input type="text" id="send-message" name="message" placeholder="entrez un message...">
@@ -54,7 +27,14 @@
                 <p id="timer1">10:00</p>
             </div>
         </div>
-        <div id="moves-section"></div>
+        <div id="moves-section">
+            <div id="moves">
+            </div>
+            <div id="moves-buttons">
+                <button id="resing-button">Abandonner</button>
+                <button id="draw-button">Proposer nulle</button>
+            </div>
+        </div>
     </main>
     <script type="module" src="../js/chessboard.mjs">main(location.href);</script>
 </body>
