--- a/public/html/game.html
+++ b/public/html/game.html
@@ -3,20 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script type="text/javascript" src="../js/chess.js"></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Game</h1>
     <main>
-        <form id="chess_form" onsubmit="event.preventDefault(); send_move();">
-            <input type="text" name="move_text" id="move_text">
-            <input type="submit">
-        </form>
-        <p id="timer">10:00</p>
-        <div id="moves">
+        <div id="chat">
+            <div id="messages">
+            </div>
+            <form id="message-form">
+                <input type="text" id="send-message" name="message" placeholder="entrez un message...">
+                <input type="submit" value="" onclick="event.preventDefault();">
+            </form>
+        </div>
+        <div id="game">
+            <div id="opponent-infos">
+                <p><span class="user-name">Opponent</span></p>
+                <p id="timer2">10:00</p>
+            </div>
+            <div id="chessboard"></div>
+            <div id="user-infos">
+                <p><span class="user-name">Vous</span></p>
+                <p id="timer1">10:00</p>
+            </div>
+        </div>
+        <div id="moves-section">
+            <div id="moves">
+            </div>
+            <div id="moves-buttons">
+                <button id="resing-button">Abandonner</button>
+                <button id="draw-button">Proposer nulle</button>
+            </div>
         </div>
     </main>
+    <script type="module" src="../js/chessboard.mjs">main(location.href);</script>
 </body>
 </html>
