add resign button

--- a/public/html/game.html
+++ b/public/html/game.html
@@ -31,7 +31,7 @@
             <div id="moves">
             </div>
             <div id="moves-buttons">
-                <button id="resing-button">Abandonner</button>
+                <button id="resign-button">Abandonner</button>
                 <button id="draw-button">Proposer nulle</button>
             </div>
         </div>
