--- a/public/html/game.html
+++ b/public/html/game.html
@@ -13,7 +13,7 @@
             </div>
             <form id="message-form">
                 <input type="text" id="send-message" name="message" placeholder="entrez un message...">
-                <input type="submit" value="" onclick="event.preventDefault();">
+                <input type="submit" value="" id="submit-message" onclick="event.preventDefault();">
             </form>
         </div>
         <div id="game">
