--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,6 +15,8 @@
     <section id="waiting-games">
         <h2>Parties en attentes : </h2>
     </section>
+    <h2><a href="./stockfish">Affronter Stockfish</a></h2>
+    <p><a href="https://github.com/official-stockfish/Stockfish">Voir le code source de stockfish</a></p>
     <script type="module" src="../js/home.mjs"></script>
 </body>
 </html>
