--- a/public/html/game.html
+++ b/public/html/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>chess pomme</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -36,6 +36,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="../js/chessboard.mjs">main(location.href);</script>
+    <script type="module" src="../js/chess_game/chessboard.mjs">main(location.href);</script>
 </body>
 </html>
