--- a/public/html/game.html
+++ b/public/html/game.html
@@ -36,6 +36,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="../js/chess_game/chessboard.mjs">main(location.href);</script>
+    <script type="module" src="../js/chess_game/chess_ws.mjs">main(location.href);</script>
 </body>
 </html>
