add stockfish launch game popup

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -18,28 +18,8 @@
     <section id="bot-games">
         <h2>Bots : </h2>
         <section id="stockfish-games">
-            <h3><a href="https://github.com/official-stockfish/Stockfish">Affronter Stockfish</a></h3>
-            <p><a href="./stockfish?level=0">Stockfish level 0</a></p>
-            <p><a href="./stockfish?level=1">Stockfish level 1</a></p>
-            <p><a href="./stockfish?level=2">Stockfish level 2</a></p>
-            <p><a href="./stockfish?level=3">Stockfish level 3</a></p>
-            <p><a href="./stockfish?level=4">Stockfish level 4</a></p>
-            <p><a href="./stockfish?level=5">Stockfish level 5</a></p>
-            <p><a href="./stockfish?level=6">Stockfish level 6</a></p>
-            <p><a href="./stockfish?level=7">Stockfish level 7</a></p>
-            <p><a href="./stockfish?level=8">Stockfish level 8</a></p>
-            <p><a href="./stockfish?level=9">Stockfish level 9</a></p>
-            <p><a href="./stockfish?level=10">Stockfish level 10</a></p>
-            <p><a href="./stockfish?level=11">Stockfish level 11</a></p>
-            <p><a href="./stockfish?level=12">Stockfish level 12</a></p>
-            <p><a href="./stockfish?level=13">Stockfish level 13</a></p>
-            <p><a href="./stockfish?level=14">Stockfish level 14</a></p>
-            <p><a href="./stockfish?level=15">Stockfish level 15</a></p>
-            <p><a href="./stockfish?level=16">Stockfish level 16</a></p>
-            <p><a href="./stockfish?level=17">Stockfish level 17</a></p>
-            <p><a href="./stockfish?level=18">Stockfish level 18</a></p>
-            <p><a href="./stockfish?level=19">Stockfish level 19</a></p>
-            <p><a href="./stockfish?level=20">Stockfish level 20</a></p>
+            <h3><a href="#">Affronter Stockfish</a></h3>
+            <p><a href="https://github.com/official-stockfish/Stockfish" target="_blank">Voir le code source</a></p>
         </section>
     </section>
     <script type="module" src="../js/home.mjs"></script>
