add custom timer

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <h1>Home</h1>
-    <form id="game_form" method="get" action="./game">
-        <input type="text" name="id_game" id="create-game" maxlength="5" pattern="^\d{1,5}$" required>
-        <input type="submit" id="send-game-id" value="créer la partie">
-    </form>
+    <h2><a href="#">Créer une partie</a></h2>
     <section id="waiting-games">
         <h2>Parties en attentes : </h2>
     </section>
